--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,12 @@ form {
   padding: 15px;
 }
 
+p {
+  font-size: 15px;
+  color: #8675a9;
+  text-align: center;
+}
+
 h2 {
   font-size: 30px;
   color: #e97171;
@@ -60,6 +66,11 @@ li i {
   margin-right: 85px;
 }
 
+.units {
+  font-size: 15px;
+  color: #8675a9;
+}
+
 .current-date {
   font-size: 15px;
   color: #8675a9;
@@ -82,14 +93,4 @@ li i {
   font-weight: 400px;
   list-style-type: none;
   margin: 0 auto;
-}
-
-.units {
-  display: block;
-  margin: 0 auto;
-  font-size: 30px;
-  color: #8675a9;
-  text-align: center;
-  position: relative;
-  top: -34px;
 }
